--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.5.4",
+    "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.10"
+    "react-intersection-observer": "^9.13.1"
   },
   "devDependencies": {
     "postcss": "^8",
